8281855: Rename ResourceScope to MemorySession
Reviewed-by: psandoz, jvernee